[package]
name = "cargo-make"
version = "0.36.4"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Rust task runner and build tool."
license = "Apache-2.0"
edition = "2021"
documentation = "https://sagiegurari.github.io/cargo-make"
homepage = "https://sagiegurari.github.io/cargo-make"
repository = "https://github.com/sagiegurari/cargo-make.git"
readme = "README.md"
keywords = ["task", "build", "cargo", "plugin", "subcommand"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::build-utils",
  "development-tools::testing",
]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/CHANGELOG.md",
  "/Makefile.toml",
  "/extra/shell/*",
]

[lib]
name = "cli"
path = "src/lib/mod.rs"

[[bin]]
name = "cargo-make"
path = "src/main.rs"

[[bin]]
name = "makers"
path = "src/makers.rs"

[dependencies]
cargo_metadata = "^0.15"
ci_info = "^0.14.9"
cliparser = "^0.1.2"
colored = "^2"
ctrlc = "^3.2.4"
dirs-next = "^2"
duckscript = "^0.7.5"
duckscriptsdk = { version = "^0.8.17", default-features = false }
envmnt = "^0.10.4"
fern = "^0.6"
fsio = { version = "^0.4", features = ["temp-path"] }
git_info = "^0.1.2"
glob = "^0.3.1"
home = "^0.5"
indexmap = { version = "^1", features = ["serde-1"] }
ignore = "^0.4"
lenient_semver = "^0.4.2"
log = "^0.4"
once_cell = "^1.17.0"
petgraph = "^0.6.2"
regex = "^1.7.1"
run_script = "^0.10"
rust_info = "^0.3.1"
semver = "^1"
serde = "^1"
serde_derive = "^1"
serde_ignored = "^0.1"
serde_json = "^1"
shell2batch = "^0.4.5"
toml = "^0.7"

[target.'cfg(windows)'.dependencies]
ansi_term = "^0.12.1"

[features]
tls-rustls = ["duckscriptsdk/tls-rustls"]
tls-native = ["duckscriptsdk/tls-native"]
tls = ["tls-rustls"]                      # alias for backward compatibility
default = ["tls-rustls"]

[badges.codecov]
branch = "master"
repository = "sagiegurari/cargo-make"
service = "github"
