[package]
name = "cargo-make"
version = "0.37.15"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Rust task runner and build tool."
license = "Apache-2.0"
edition = "2021"
documentation = "https://sagiegurari.github.io/cargo-make"
homepage = "https://sagiegurari.github.io/cargo-make"
repository = "https://github.com/sagiegurari/cargo-make.git"
readme = "README.md"
keywords = ["task", "build", "cargo", "plugin", "subcommand"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::build-utils",
  "development-tools::testing",
]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/CHANGELOG.md",
  "/Makefile.toml",
  "/extra/shell/*",
]

[lib]
name = "cli"
path = "src/lib/mod.rs"

[[bin]]
name = "cargo-make"
path = "src/main.rs"

[[bin]]
name = "makers"
path = "src/makers.rs"

[dependencies]
cargo_metadata = "^0.18"
ci_info = "^0.14.14"
cliparser = "^0.1.2"
colored = "^2"
ctrlc = "^3"
dirs-next = "^2"
duckscript = "^0.8.0"
duckscriptsdk = { version = "^0.9.3", default-features = false }
envmnt = "^0.10.4"
fern = "^0.6"
fsio = { version = "^0.4", features = ["temp-path"] }
git_info = "^0.1.2"
glob = "^0.3.1"
home = "^0.5"
ignore = "^0.4"
indexmap = { version = "^2", features = ["serde"] }
itertools = "^0.13"
lenient_semver = "^0.4.2"
log = "^0.4"
once_cell = "^1.19.0"
petgraph = "^0.6.5"
regex = "^1.10"
run_script = "^0.10"
rust_info = "^0.3.1"
semver = "^1"
serde = "^1"
serde_derive = "^1"
serde_ignored = "^0.1"
serde_json = "^1"
sha2 = "^0.10"
shell2batch = "^0.4.5"
strip-ansi-escapes = "^0.2"
strum_macros = "0.26.4"
toml = "^0.8"

[dev-dependencies]
expect-test = "^1"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "^0.50"

[features]
tls-rustls = ["duckscriptsdk/tls-rustls"]
tls-native = ["duckscriptsdk/tls-native"]
tls = ["tls-rustls"]                      # alias for backward compatibility
default = ["tls-rustls"]
